<resources>
    <string name="app_name">Shows</string>
    <string name="login_screen_app_name">Shows</string>
    <string name="login_screen_title">Login</string>
    <string name="login_screen_description">In order to continue please log in.</string>
    <string name="login_screen_email_hint">Email</string>
    <string name="login_screen_password_hint">Password</string>
    <string name="login_screen_login_button">Login</string>
    <string name="login_screen_email_error">Invalid input</string>
    <string name="login_screen_login_error_dialog_title">Login error</string>
    <string name="login_screen_login_title_user_registered">Registration successful!</string>
    <string name="shows_screen_title">Shows</string>
    <string name="the_office_title">The Office</string>
    <string name="krv_nije_voda_title">Krv nije voda</string>
    <string name="stranger_things_title">Stranger Things</string>
    <string name="show_card_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="shows_screen_upload_title_error_dialog">Error while uploading image</string>
    <string name="shows_screen_error_dialog_title">Error while getting shows</string>
    <string name="shows_activity_no_shows_message">Your shows are not showing. Get it?</string>
    <string name="show_details_screen_description">The Office is an American mockumentary sitcom television series that depicts the everyday work lives of office employees in the Scranton, Pennsylvania, branch of the fictional Dunder Mifflin Paper Company. It aired on NBC from March 24, 2005, to May 16, 2013, lasting a total of nine seasons.</string>
    <string name="show_details_screen_reviews_title">Reviews</string>
    <string name="show_details_screen_reviews_info">%1$d REVIEWS, %2$.2f AVERAGE</string>
    <string name="show_details_screen_reviews_username_1">neil.the.navy.seal</string>
    <string name="show_details_screen_reviews_username_2">renato.ruric</string>
    <string name="show_details_screen_reviews_username_3">kanye.east</string>
    <string name="show_details_screen_review_1">This show was a complete masterpiece, I really liked it.</string>
    <string name="show_details_screen_review_2">It was good. I laughed a lot, it matches my sense of humor perfectly. Loved it!</string>
    <string name="show_details_screen_add_review">Write a review</string>
    <string name="show_details_screen_no_reviews">No reviews yet.</string>
    <string name="show_details_screen_add_review_dialog_title">Shows app</string>
    <string name="show_deatils_screen_init_error_dialog_title">Error while getting show</string>
    <string name="show_details_screen_add_review_error_dialog_title">Error while adding review</string>
    <string name="show_details_screen_add_review_dialog_message">Are you sure you want to add a new review?</string>
    <string name="show_details_screen_add_review_dialog_cancel_button">CANCEL</string>
    <string name="show_details_screen_add_review_dialog_confirmation_button">ADD</string>
    <string name="dialog_add_review_title">Write a review</string>
    <string name="dialog_add_review_confirmation_button">Submit</string>
    <string name="check_box_text">Remember me</string>
    <string name="change_profile_picture_button">Change profile photo</string>
    <string name="logout_button">Logout</string>
    <string name="logout_dialog_message">Are you sure you want to logout?</string>
    <string name="logout_dialog_confirmation_button">Continue</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_cancel_button">Cancel</string>
    <string name="register_screen_title">Register</string>
    <string name="register_screen_email_hint">Email</string>
    <string name="register_screen_password_hint">Password</string>
    <string name="register_screen_repeat_password_hint">Repeat password</string>
    <string name="register_screen_register_button">Register</string>
    <string name="login_screen_register_button">Register</string>
    <string name="register_screen_registration_failed_dialog_title">Registration failed</string>
    <string name="OK">OK</string>
</resources>