<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/topStartCornerImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_top_left_illustration"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_top_right_illustration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/playImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="92dp"
                android:layout_marginStart="56dp"
                android:src="@drawable/ic_triangle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topStartCornerImageView"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/showsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/login_screen_app_name"
                android:textSize="34sp"
                android:fontFamily="@font/font_roboto_bold"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/playImageView"
                app:layout_constraintStart_toEndOf="@id/playImageView"
                app:layout_constraintTop_toTopOf="@id/playImageView"
                android:visibility="gone"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/loginTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="156dp"
                android:textSize="34sp"
                android:fontFamily="@font/font_roboto_bold"
                android:textColor="@color/white"
                android:text="@string/login_screen_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playImageView"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/instructionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp"
                android:textSize="17sp"
                android:fontFamily="@font/font_roboto_regular"
                android:textColor="@color/white"
                android:text="@string/login_screen_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/loginTextView"
                app:layout_constraintTop_toBottomOf="@id/loginTextView"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginHorizontal="24dp"
                android:textColorHint="@color/white"
                android:hint="@string/login_screen_email_hint"
                app:boxStrokeColor="@color/color_login_screen_edit_text_border"
                app:helperTextTextColor="@color/white"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instructionTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    android:fontFamily="@font/font_roboto_regular"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColorHint="@color/white"
                android:hint="@string/login_screen_password_hint"
                app:boxCornerRadiusBottomEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:boxStrokeColor="@color/color_login_screen_edit_text_border"
                app:helperTextTextColor="@color/white"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/usernameInputLayout"
                app:layout_constraintStart_toStartOf="@id/usernameInputLayout"
                app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    android:fontFamily="@font/font_roboto_regular"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/saveLoginCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:gravity="start|center_vertical"
                android:checked="false"
                android:text="@string/check_box_text"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
                tools:ignore="RtlHardcoded"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/loginButton"
                app:layout_constraintTop_toBottomOf="@id/saveLoginCheckBox"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="24dp"
                android:textSize="17sp"
                android:fontFamily="@font/font_roboto_bold"
                android:textColor="@color/color_login_screen_button_text"
                android:text="@string/login_screen_login_button"
                android:textAllCaps="false"
                android:enabled="false"
                app:backgroundTint="@color/color_login_screen_button_background"
                app:cornerRadius="25dp"
                app:layout_constraintBottom_toTopOf="@id/registerButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="32dp"
                android:textSize="17sp"
                android:fontFamily="@font/font_roboto_bold"
                android:textColor="@color/white"
                android:text="@string/login_screen_register_button"
                android:textAllCaps="false"
                app:backgroundTint="@color/purple"
                app:cornerRadius="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/progressBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:indeterminateTintMode="@color/white"/>
    </FrameLayout>
</FrameLayout>